# libKD

./: .appveyor.ctest  .appveyor.ctest.note.in  .appveyor.yml  .clang-format  .clang-tidy  .codecov.yml  .gitignore  .gitlab-ci.ctest  .gitlab-ci.yml  .gitmodules  .magnum.ctest  .magnum.yml  .mailmap  .scrutinizer.yml  .travis.ctest  .travis.ctest.note.in  .travis.yml  CMakeLists.txt  CPPLINT.cfg  CPackConfig.cmake  CTestConfig.cmake  CTestCustom.cmake  CTestRun.cmake  Cppcheck.cmake  FindCppcheck.cmake  FindEGL.cmake  FindGLES.cmake  FindGLES2.cmake  FindKHR.cmake  FindSDL2.cmake  FindWAYLAND.cmake  FindWayland.cmake  FindXORG.cmake  FindXorg.cmake  Flawfinder.cmake  LICENSE  LICENSE.md  PVS-Studio.cmake  README  README.md  (+9 more)
.github/workflows/: ci-tools.yml  ctest.yml  github.yml  merge_dependabot.yml
buildsystem/: CMakeLists.txt  FindEGL.cmake  FindX11.cmake  build.sh
ci/: install_cmake.py  install_icc.sh
distribution/KD/: ATX_dxtcomp.h  ATX_imgdec.h  ATX_imgdec_pvr.h  ATX_keyboard.h  EXT_platform_window.h  LKD_atomic.h  LKD_guid.h  LKD_queue.h  VEN_atomic.h  VEN_queue.h  kdplatform.h  kdplatform.h.in
example/: example_angeles.c  example_common.h  example_eventloop.c  example_gears.c  example_glbook_particle.c  example_glbook_triangle.c  example_locale.c  example_ls.c  example_minimal.c  example_nehe_texture.c  example_overview.c  example_triangle.c  example_ui_calc.c  example_ui_canvas.c  mojoal.c  nuklear.h  stb_vorbis.c
example/android/: build.gradle  local.properties
example/android/app/: AndroidManifest.xml  build.gradle
example/angeles/: cams.h  matrixop.h  shader.h  shaders.h  shadersrc.h  shapes.h
example/data/: cams.h
examples/: example_event.c  example_event_callback.c  example_event_timer.c  example_overview.c  example_ui.c  kd_example_1.c  kd_example_2.c  kd_example_3.c  kd_example_4.c
include/EGL/: eglplatform.h
include/KD/: ACR_secure_storage.h  ACR_system_font.h  ATX_bluetooth.h  ATX_dxtcomp.h  ATX_imgdec.h  ATX_imgdec_jpeg.h  ATX_imgdec_png.h  ATX_imgdec_pvr.h  ATX_keyboard.h  KHR_float64.h  KHR_formatted.h  KHR_perfcounter.h  KHR_thread_storage.h  NV_extwindowprops.h  QNX_input.h  QNX_window.h  VEN_atomic.h  VEN_atomic_ops.h  VEN_concurrent_queue.h  VEN_keyboard.h  VEN_queue.h  kd.h  kdext.h  kdplatform.h.in
include/KHR/: khrplatform.h
source/: kd (copy).c  kd.c  kd_atomic_ops.c  kd_dxtcomp.c  kd_filesystem.c  kd_formatted.c  kd_general.c  kd_imgdec.c  kd_imgdec_pvr.c  kd_internal.h  kd_internal_queue.c  kd_internal_syscalls.c  kd_malloc.c  kd_math.c  kd_sockets.c  kd_string.c  kd_sysfont.c  kd_threads.c  kd_time.c  kd_timer.c  kd_tls.c  kd_utility.c  miniz.h  rpmalloc.c  rpmalloc.h  stb_dxt.h  stb_image.h  stb_image_resize.h  stb_sprintf.h  stb_truetype.h
sourcecode/: kd.c
sourcecode/compatibility/mqueue/: mqueue.h
sourcecode/compatibility/pthread/: pthread.c  pthread.h
sourcecode/compatibility/semaphore/: semaphore.c  semaphore.h
test/: stb_image_write.h  test.h  test_11.2.1.c  test_11.2.2.c  test_11.2.3.c  test_11.2.4.c  test_11.2.5.c  test_12.2.1.c  test_13.2.1-3.c  test_14.2.1-2.c  test_15.3.1.c  test_15.3.10.c  test_15.3.11.c  test_15.3.12.c  test_15.3.13.c  test_15.3.14.c  test_15.3.15.c  test_15.3.16.c  test_15.3.17.c  test_15.3.2.c  test_15.3.3.c  test_15.3.4.c  test_15.3.5.c  test_15.3.6.c  test_15.3.7.c  test_15.3.8.c  test_15.3.9.c  test_16.2.1.c  test_16.2.11.c  test_16.2.2.c  test_16.2.3.c  test_16.2.4.c  test_16.2.5.c  test_16.2.6.c  test_16.2.7.c  test_16.2.8.c  test_16.2.9.c  test_17.2.3.c  test_18.2.1-2.c  test_19.4.1-2.c  (+27 more)
test/data/images/: lenna-2bpp-rgb.pvr  lenna-2bpp-rgba.pvr  lenna-4bpp-rgb.pvr  lenna-4bpp-rgba.pvr
tests/: test_callback.c  test_eventloop.c  test_stacksize.c  test_threadonce.c
